<resources>
    <string name="app_name">Tittle Tattle</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="air_plane_on">Air Plane On</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add</string>
    <string name="no_data">No Data</string>
    <string name="cancle">Cancle</string>
    <string name="timer">Timer</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>